# ai-pr-review-app

./: .gitignore  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build-and-sign.ps1  sign-windows.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.serena/: project.yml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: About.tsx  AppFooter.tsx  AppHeader.tsx  ErrorBoundary.tsx  FolderTree.tsx  Input.tsx  Onboarding.tsx  Result.tsx  Reviewing.tsx  Settings.tsx  SponsorBadges.tsx
src/components/report/: AIPromptSection.tsx  DescribeSection.tsx  IssueCard.tsx  IssueList.tsx  ReportSummary.tsx
src/components/settings/: GithubAuthSection.tsx  ModelSelect.tsx  SecretField.tsx  SectionCard.tsx  ThemeToggle.tsx  useSecretState.ts
src/components/ui/: Badge.tsx
src/lib/: anthropicClient.ts  claudeCode.ts  githubAuth.ts  githubClient.ts  markdown.ts  prompts.ts  reviewer.ts  storage.ts
src/shims/: node-fs.ts  node-os.ts  node-path.ts
src/styles/: global.css
