[package]
name = "ai-pr-review-app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_pr_review_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS native keychain (Windows Credential Manager / macOS Keychain / Linux Secret Service).
# v3 — Tauri 2 호환, 안정 API (Entry::new / set_password / get_password / delete_password).
#
# IMPORTANT: keyring 3.x ships with NO native backend by default — without features the
# crate links only the `mock` (per-Entry in-memory) store, so set/get appear to succeed
# but each Entry::new() creates a fresh isolated state → token disappears between calls.
# 반드시 플랫폼별 native feature 를 명시적으로 활성화해야 한다.
#   - windows-native       → Windows Credential Manager (wincred)
#   - apple-native         → macOS Keychain Access
#   - sync-secret-service  → Linux Secret Service (libsecret) — crypto-rust 필요
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
tauri-plugin-http = "2.5.9"

